--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+"boto3" = "*"
+"fabric3" = "*"
+troposphere = "*"
 
 [requires]
 python_version = "3.7"
