--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pyyaml = ">=4.2b1"
 fab-support = "*"
 unipath = "*"
 configparser = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.7"
